--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,17 @@
 [package]
-name = "back-iter"
+name = "keep-last"
 version = "0.1.0"
 edition = "2021"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+uninit = { version = "0.5.0", default-features = false, features = [
+    "const_generics",
+] }
+
+
+[features]
+default = ["alloc"]
+alloc = ["uninit/alloc"]
